--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,6 +4,9 @@ on:
   push:
     tags:
       - "*"
+permissions:
+  contents: write
+  packages: write
 jobs:
   releases-matrix:
     name: Release Go Binary
